crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__no_search_all.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "res.partner", may impact performance.
  --> no_search_all.py:10:24
   |
 9 |     def action_all(self):
10 |         all_partners = self.env["res.partner"].search([])
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |         limited = self.env["res.partner"].search([], limit=100)
12 |         filtered = self.env["res.partner"].search([("active", "=", True)])
   |

ODW8163 Using an empty domain `search_read([])` without a `limit` will load all records of "res.partner", may impact performance.
  --> no_search_all.py:14:20
   |
12 |         filtered = self.env["res.partner"].search([("active", "=", True)])
13 |         counted = self.env["res.partner"].search([], count=True)
14 |         read_all = self.env["res.partner"].search_read([])
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
15 |         return all_partners, limited, filtered, counted, read_all
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "res.partner", may impact performance.
  --> no_search_all.py:19:24
   |
17 |     def action_domain_variable(self):
18 |         domain = []
19 |         all_partners = self.env["res.partner"].search(domain)
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |
21 |         built_domain = []
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "account.move", may impact performance.
  --> no_search_all.py:35:17
   |
33 |     def action_glob_match(self):
34 |         # "account.move*" covers the lines too.
35 |         moves = self.env["account.move"].search([])
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
36 |         lines = self.env["account.move.line"].search([])
37 |         return moves, lines
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "account.move.line", may impact performance.
  --> no_search_all.py:36:17
   |
34 |         # "account.move*" covers the lines too.
35 |         moves = self.env["account.move"].search([])
36 |         lines = self.env["account.move.line"].search([])
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
37 |         return moves, lines
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "sale.order", may impact performance.
  --> no_search_all.py:41:22
   |
39 |     def action_model_through_variable(self):
40 |         orders = self.env["sale.order"]
41 |         all_orders = orders.search([])
   |                      ^^^^^^^^^^^^^^^^^
42 |
43 |         settings = self.env["res.config.settings"]
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "stock.move", may impact performance.
  --> no_search_all.py:48:17
   |
47 |     def action_passthrough_chain(self):
48 |         moves = self.env["stock.move"].sudo().search([])
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
49 |         quants = self.env["stock.quant"].with_context(active_test=False).search([])
50 |         return moves, quants
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "stock.quant", may impact performance.
  --> no_search_all.py:49:18
   |
47 |     def action_passthrough_chain(self):
48 |         moves = self.env["stock.move"].sudo().search([])
49 |         quants = self.env["stock.quant"].with_context(active_test=False).search([])
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
50 |         return moves, quants
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "account.move", may impact performance.
  --> no_search_all.py:64:16
   |
62 |     def action_self_search(self):
63 |         # `self` runs against the model the class declares.
64 |         return self.search([])
   |                ^^^^^^^^^^^^^^^

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "account.move", may impact performance.
  --> no_search_all.py:80:16
   |
78 |     def action_self_search(self):
79 |         # No `_name`, so the class extends every model it inherits: `self` is `account.move`.
80 |         return self.search([])
   |                ^^^^^^^^^^^^^^^

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "res.partner", may impact performance.
   --> no_search_all.py:106:20
    |
104 |     def values(self):
105 |         # Reported: the subscript names the model whatever the surrounding class is.
106 |         partners = request.env["res.partner"].search([])
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
107 |         # Not reported: `self` in a controller is the controller, not a recordset.
108 |         self.search([])
    |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "account.move", may impact performance.
   --> no_search_all.py:114:5
    |
112 | def post_init_hook(env):
113 |     # Reported: a bare `env` names its model through the subscript just the same.
114 |     env["account.move"].search([])
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
115 |     # Not reported: a non-empty domain is only reported in the code of a cron.
116 |     env["account.move"].search([("state", "=", "draft")])
    |
