crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__no_search_all_custom_models.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "res.users", may impact performance.
  --> no_search_all.py:28:17
   |
26 |     def action_model_not_listed(self):
27 |         # These models stay small, so an unlimited search on them is not worth reporting.
28 |         users = self.env["res.users"].search([])
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
29 |         params = self.env["ir.config_parameter"].search([])
30 |         companies = self.env["res.company"].search_read([])
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "res.config.settings", may impact performance.
  --> no_search_all.py:44:24
   |
43 |         settings = self.env["res.config.settings"]
44 |         all_settings = settings.search([])
   |                        ^^^^^^^^^^^^^^^^^^^
45 |         return all_orders, all_settings
   |

ODW8163 Using an empty domain `search([])` without a `limit` will load all records of "res.config.settings", may impact performance.
  --> no_search_all.py:72:16
   |
70 |     def action_self_search(self):
71 |         # Same shape, but this model is not one that grows.
72 |         return self.search([])
   |                ^^^^^^^^^^^^^^^
