crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__odoo_exception_warning_1.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODR8101 [*] `odoo.exceptions.Warning` is a deprecated alias to `odoo.exceptions.UserError`, use `from odoo.exceptions import UserError`
 --> odoo_exception_warning_1.py:3:40
  |
1 | """`UserError` is already imported: `Warning` is dropped in its favor."""
2 |
3 | from odoo.exceptions import UserError, Warning
  |                                        ^^^^^^^
help: Replace with `UserError`
  |
2 |
  - from odoo.exceptions import UserError, Warning
3 + from odoo.exceptions import UserError
4 |
5 |
6 | def check(record):
7 |     if not record.active:
  -         raise Warning("Inactive record")
8 +         raise UserError("Inactive record")
9 |     if not record.name:
  |
note: This is an unsafe fix and may change runtime behavior
