crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__odoo_exception_warning_2.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODR8101 [*] `odoo.exceptions.Warning` is a deprecated alias to `odoo.exceptions.UserError`, use `from odoo.exceptions import UserError`
 --> odoo_exception_warning_2.py:3:29
  |
1 | """Aliased as `UserError` already: dropping the alias is the whole fix."""
2 |
3 | from odoo.exceptions import Warning as UserError
  |                             ^^^^^^^^^^^^^^^^^^^^
help: Replace with `UserError`
  |
2 |
  - from odoo.exceptions import Warning as UserError
3 + from odoo.exceptions import UserError
4 |
  |
