crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__odoo_exception_warning_3.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODR8101 `odoo.exceptions.Warning` is a deprecated alias to `odoo.exceptions.UserError`, use `from odoo.exceptions import UserError`
 --> odoo_exception_warning_3.py:3:29
  |
1 | """`UserError` is bound to something else: flagged, but no fix is offered."""
2 |
3 | from odoo.exceptions import Warning
  |                             ^^^^^^^
help: Replace with `UserError`
